# llm-blackjack-synthetic-language

./: .gitignore  Cargo.toml  README.MD  icl-evals.py  justfile  test-train.py
src/: blackjack.rs  main.rs  tokenizer.rs
